// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssignmentGradeFilter Component snapshots buttons and groups disabled if no selected assignment 1`] = `
<div
  className="grade-filter-inputs"
>
  <PercentGroup
    disabled={true}
    id="assignmentGradeMin"
    label="Min Grade"
    onChange={[MockFunction handleSetMin]}
    value="2"
  />
  <PercentGroup
    disabled={true}
    id="assignmentGradeMax"
    label="Max Grade"
    onChange={[MockFunction handleSetMax]}
    value="98"
  />
  <div
    className="grade-filter-action"
  >
    <Button
      active={false}
      disabled={true}
      name="assignmentGradeMinMax"
      onClick={[MockFunction handleSubmit]}
      type="submit"
      variant="outline-secondary"
    >
      Apply
    </Button>
  </div>
</div>
`;

exports[`AssignmentGradeFilter Component snapshots smoke test 1`] = `
<div
  className="grade-filter-inputs"
>
  <PercentGroup
    disabled={false}
    id="assignmentGradeMin"
    label="Min Grade"
    onChange={[MockFunction handleSetMin]}
    value="2"
  />
  <PercentGroup
    disabled={false}
    id="assignmentGradeMax"
    label="Max Grade"
    onChange={[MockFunction handleSetMax]}
    value="98"
  />
  <div
    className="grade-filter-action"
  >
    <Button
      active={false}
      disabled={false}
      name="assignmentGradeMinMax"
      onClick={[MockFunction handleSubmit]}
      type="submit"
      variant="outline-secondary"
    >
      Apply
    </Button>
  </div>
</div>
`;
